--- a/modules/ROOT/pages/deployment/wopi/wopi.adoc
+++ b/modules/ROOT/pages/deployment/wopi/wopi.adoc
@@ -31,9 +31,9 @@ Configured applications can be selected by users when opening a document via the
 
 Office applications are:
 
-* provided via the xref:{s-path}/app-provider.adoc[App-Provider Service] because they are not able to register themself, see the xref:#wopi-coniguration-examples[docker-compose.yml] file. 
+* provided via the xref:{s-path}/app-provider.adoc[App-Provider Service] because they are not able to register themself, see the xref:#wopi-configuration-examples[docker-compose.yml] file. 
 
-* configured for use with the WebUI via the xref:{s-path}/app-registry.adoc[App-Registry Service]. Here, default office apps and their appearance in the list of available apps in the webUI are defined. For more information see the xref:#wopi-coniguration-examples[app-registry.yaml] file.
+* configured for use with the WebUI via the xref:{s-path}/app-registry.adoc[App-Registry Service]. Here, default office apps and their appearance in the list of available apps in the webUI are defined. For more information see the xref:#wopi-configuration-examples[app-registry.yaml] file.
 
 {empty}
 [[special-ms-note]]
@@ -62,7 +62,7 @@ The image below shows the WOPI integration in an overview to get a better unders
 
 image::deployment/wopi/wopi-overview.svg[WOPI Overview Diagram]
 
-== WOPI Coniguration Examples
+== WOPI configuration Examples
 
 * See below for an example WOPI configuration using Docker Compose, to get a first impression of how a WOPI configuration can be achieved. Both, _ocis environment variables_ and _ocis service configuration_ yaml files are used. See the xref:conf-examples/office/office-integration.adoc[Office Integration] document for an in depth explanation.
 +
