--- a/modules/ROOT/pages/quickguide/quickguide.adoc
+++ b/modules/ROOT/pages/quickguide/quickguide.adoc
@@ -40,3 +40,5 @@ ocis server
 ----
 
 After installing and starting Infinite Scale, you can access the web UI via `\https://localhost:9200`
+
+include::partial$multi-location/idm-https-reverse-proxy.adoc[]
