--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -361,6 +361,8 @@ Expects a URL including _protocol_, _host_ and optionally _port_ to simplify con
 NOTE: If you need to access Infinite Scale running on a VM or a remote machine via a host name other than localhost or in a container, you need to configure the host name with `OCIS_URL`. The same applies if you are not using host names but an IP address (e.g. 192.168.178.25) instead.
 +
 NOTE: By default, Infinite Scale enforces https for web and client access. If necessary, this can be changed to http, which is not recommended for production. For details see xref:deployment/services/tls.adoc#tls-for-the-http-frontend[TLS for the HTTP Frontend] and xref:deployment/services/s-list/proxy.adoc[Proxy Service Configuration].
++
+include::partial$multi-location/idm-https-reverse-proxy.adoc[]
 
 
 PROXY_HTTP_ADDR::
@@ -488,6 +490,8 @@ See xref:deployment/services/logging.adoc[Logging] at the _Services_ description
 // https://owncloud.dev/ocis/deployment/ocis_individual_services/
 
 If you are using a reverse proxy like Traefik and the reverse proxy manages the certificates to secure the access, there is no need to use certificates between the reverse proxy and Infinite Scale again. You can therefore set `OCIS_INSECURE=false` or remove it completely. Also see: xref:handling-certificates[Handling Certificates].
+
+include::partial$multi-location/idm-https-reverse-proxy.adoc[]
 
 == Maintenance Commands
 
