--- a/modules/ROOT/partials/multi-location/idm-https-reverse-proxy.adoc
+++ b/modules/ROOT/partials/multi-location/idm-https-reverse-proxy.adoc
@@ -1,1 +1,1 @@
-NOTE: If you want to reuse an already configured minimized setup for any other address than `\https://localhost`, you must use a reverse proxy. When Infinite Scale is accessed, it forwards requests to the embedded IDM service which requires mandatory a secure connection. See the xref:depl-examples/bare-metal.adoc[Bare Metal Deployment with systemd] for more details using a reverse proxy setup.
+NOTE: If you want to reuse an already configured minimized setup for any other address than `\https://localhost`, you must use a reverse proxy. When Infinite Scale is accessed, it forwards requests to the embedded IDM service which requires a secure connection. See the xref:depl-examples/bare-metal.adoc[Bare Metal Deployment with systemd] for more details on using a reverse proxy setup.
