--- a/modules/ROOT/pages/deployment/services/env-vars-special-scope.adoc
+++ b/modules/ROOT/pages/deployment/services/env-vars-special-scope.adoc
@@ -21,43 +21,31 @@ Examples:
 // their source is in: https://github.com/owncloud/ocis/blob/master/ocis-pkg/config/config.go
 // at 'type Runtime struct'
 
-The following environment variables are only available with the xref:deployment/binary/binary-setup.adoc[Binary Setup] and do not have any dependency to a release:
+The following environment variables are only available with the xref:deployment/binary/binary-setup.adoc[Binary Setup]:
 
 [tabs]
 ====
-Since 3.0.0::
+{service_tab_1_tab_text}::
 +
 --
-[width="100%",cols="30%,70%",options="header",]
-|===
-| Name
-| Description
-
-| `OCIS_RUN_SERVICES`
-| A comma-separated list of service names. Will start only the listed services.
-
-| `OCIS_EXCLUDE_RUN_SERVICES`
-| A comma-separated list of service names. Will start all services except for the ones listed. Has no effect when `OCIS_RUN_SERVICES` is set.
-
-| `OCIS_ADD_RUN_SERVICES`
-| A comma-separated list of service names. Will add the listed services to the default configuration. Has no effect when `OCIS_RUN_SERVICES` is set.
-|===
+include::./_special-envvar.adoc[tag=service_tab_1]
 --
-2.0.0::
+
+ifdef::use_service_tab_2[]
+{service_tab_2_tab_text}::
 +
 --
-[width="100%",cols="30%,70%",options="header",]
-|===
-| Name
-| Description
-
-| `OCIS_RUN_SERVICES`
-| A comma-separated list of service names. Will start only the listed services.
-
-| `OCIS_EXCLUDE_RUN_SERVICES`
-| A comma-separated list of service names. Will start all services except for the ones listed. Has no effect when `OCIS_RUN_SERVICES` is set.
-|===
+include::./_special-envvar.adoc[tag=service_tab_2]
 --
+endif::[]
+
+ifdef::use_service_tab_3[]
+{service_tab_3_tab_text}::
++
+--
+include::./_special-envvar.adoc[tag=service_tab_3]
+--
+endif::[]
 ====
 
 == Extended Environment Variables
