--- a/modules/ROOT/pages/deployment/services/s-list/policies.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/policies.adoc
@@ -100,7 +100,7 @@ proxy:
     query: data.proxy.granted
 ----
 
-The same can be achieved by setting the following evironment variable:
+The same can be achieved by setting the following environment variable:
 
 [source,yaml]
 ----
@@ -116,14 +116,14 @@ policies:
     query: data.postprocessing.granted
 ----
 
-The same can be achieved by setting the following evironment variable:
+The same can be achieved by setting the following environment variable:
 
 [source,yaml]
 ----
 POLICIES_POSTPROCESSING_QUERY=data.postprocessing.granted
 ----
 
-As soon as that query is configured, the postprocessing service must be informed to use the policies step by setting the environment variable: 
+As soon as that query is configured, the postprocessing service must be informed to use the policies step by setting the environment variable:
 
 [source,yaml]
 ----
