--- a/modules/ROOT/pages/deployment/services/s-list/proxy.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/proxy.adoc
@@ -144,7 +144,11 @@ The `proxy` service can use a configured store via `GRAPH_STORE_TYPE`. Possible 
 
 == Special Settings
 
-When using the Infinite Scale xref:{s-path}/idp.adoc[IDP service] instead of an external IDP, the `PROXY_TLS` environment variable must be set to `true` because the embedded `libreConnect` shipped with the IDP service has a hard check if the connection is on TLS and uses the HTTPS protocol. If this mismatches, an error will be logged.
+When using the Infinite Scale xref:{s-path}/idp.adoc[IDP service] instead of an external IDP:
+
+-   Use the environment variable xref:deployment/services/env-vars-special-scope.adoc#global-environment-variables[OCIS_URL] to define how ocis can be accessed, *mandatory* use `https` as protocol for the URL.
+-   If no reverse proxy is set up, the `PROXY_TLS` environment variable *must* be set to `true` because the embedded `libreConnect` shipped with the IDP service has a hard check if the connection is on TLS and uses the HTTPS protocol. If this mismatches, an error will be logged and no connection from the client can be established.
+-   `PROXY_TLS` *can* be set to `false` if a reverse proxy is used and the OCIS_URL is terminated at the reverse proxy. When setting to `false`, the communication between the reverse proxy and Infinite Scale is not secured. If set to `true`, you must provide certificates.
 
 == Configuration
 
