--- a/modules/ROOT/pages/deployment/services/s-list/userlog.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/userlog.adoc
@@ -21,7 +21,7 @@ Running the `userlog` service without running the xref:{s-path}/eventhistory.ado
 
 == Storing
 
-The `userlog` service persists information via the configured store in `USERLOG_STORE_TYPE`. Possible stores are:
+The `userlog` service persists information via the configured store in `USERLOG_STORE`. Possible stores are:
 
 include::partial$multi-location/caching-list.adoc[]
 // you must not have one or more blank lines here as it breaks continuous numbering!
